# BleUartBridge-idf

./: CLAUDE.md  LICENSE  README.md
Espressive/BleUartBridge/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions_esp32.csv  partitions_esp32s3.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
Espressive/BleUartBridge/boards/: esp32_devkit.h  esp32s3_devkit.h
Espressive/BleUartBridge/host/BpDfuCli/: BleMgmtClient.cs  BpDfuCli.csproj  Config.cs  Program.cs  README.md
Espressive/BleUartBridge/host/bpconnect/: README.md  app.js  index.html
Espressive/BleUartBridge/keys/: README.md  signing_public.pem
Espressive/BleUartBridge/main/: CMakeLists.txt  auth.c  auth.h  ble_mgmt.c  ble_mgmt.h  ble_nus.c  ble_nus.h  cfg.c  cfg.h  dfu.c  dfu.h  idf_component.yml  main.c  secrets.example.h  sha256.c  sha256.h  signing_pubkey.h  verify_ecdsa.c  verify_ecdsa.h
Espressive/BleUartBridge/tools/: embed_pubkey.py  keygen.py  sign_fw.py
JavaScript/BleUartBridgeTester/: index.html
JavaScript/BleUartBridgeTester/js/: app.js  ble-ble232.js
MAUI/BPplus.Ble/: BleGattProfile.cs  BleProfileDetector.cs  BleScanner.cs
MAUI/BleUartBridgeTester/BleUartBridgeTester/Services/: IRawBleClient.cs  RawBleClient.cs
MAUI/BleUartBridgeTester/BleUartBridgeTester/ViewModels/: MainViewModel.cs
