idf_component_register(
    SRCS
        "main.c"
        "ble_nus.c"
        "ble_mgmt.c"
        "auth.c"
        "cfg.c"
        "dfu.c"
        "sha256.c"
        "verify_ecdsa.c"
    INCLUDE_DIRS
        "."
        "../boards"
    REQUIRES
        bt
        driver
        esp_driver_uart
        esp_driver_gpio
        nvs_flash
        esp_system
        app_update
        mbedtls
        led_strip
)
